# spelll

./: .gitignore  .merlin  .travis.yml  LICENSE  META  Makefile  README.md  _oasis  _tags  dune  index.md  myocamlbuild.ml  opam  setup.ml  spelll.ml  spelll.mli  spelll.mllib  spelll.odocl  spelll.opam
.github/workflows/: main.yml
0.2/: index.html
0.2/spelll/: index.html
0.2/spelll/Spelll/: index.html
0.2/spelll/Spelll/Index/: index.html
0.2/spelll/Spelll/Make/: index.html
0.2/spelll/Spelll/Make/Index/: index.html
0.2/spelll/Spelll/Make/argument-1-Str/: index.html
0.2/spelll/Spelll/module-type-S/Index/: index.html
0.3/: index.html
0.3/spelll/: index.html
0.3/spelll/Spelll/: index.html
0.3/spelll/Spelll/Index/: index.html
0.3/spelll/Spelll/Make/Index/: index.html
0.3/spelll/Spelll/module-type-S/: index.html
0.3/spelll/Spelll/module-type-S/Index/: index.html
0.3/spelll/Spelll/module-type-STRING/: index.html
src/: META  Spelll.ml  Spelll.mli  dune  spelll.ml  spelll.mli
tests/: dune  run_qcheck.ml
