opam-version: "2.0"
name: "spelll"
version: "0.1"
author: "simon.cruanes.2007@m4x.org"
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "Fuzzy string searching, using Levenshtein automaton"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "dune"
  "base-bytes"
  "qcheck" {with-test}
  "odoc" {with-doc}
]
tags: [ "spell" "levenshtein" "automaton" "typo" "edit" "distance"]
homepage: "https://github.com/c-cube/spelll"
doc: "http://c-cube.github.io/spelll/"
dev-repo: "git://github.com/c-cube/spelll"
bug-reports: "https://github.com/c-cube/spelll/issues"
